2012-01-31  Jim Meyering  <jim@meyering.net>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):
	Correct a comment (insert "not") and hide nominally-doubled "to".

2012-01-30  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-agent.el (gnus-agent-auto-agentize-methods): Point to the Agent
	section in the manual.

2012-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-encode-region): Allow not folding the encoded
	words.
	(rfc2047-encode-string): Ditto.
	(rfc2047-encode-parameter): Don't fold parameters.  Some MUAs do not
	understand folded filename="..." parameters, for instance.

	* nnimap.el (nnimap-wait-for-response): Include the imap server name in
	the message for greater debuggability.

2012-01-28  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Bind `font-lock-support-mode'
	instead of setting it locally, since the latter doesn't seem to have
	any effect (most of the time).

2012-01-27  Elias Pipping  <pipping@lavabit.com>  (tiny change)

	* shr.el (shr-browse-url): Fix the name of the `browse-url-mail'
	function call.

2012-01-27  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-run-callback, gnus-demon-init): Convert to
	seconds, and make the repeat clause with HH:MM specs work as
	documented.

2012-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-get-unread-articles): Clear out "early" methods
	so that previous errors don't prohibit getting new news.

	* nnimap.el (nnimap-retrieve-group-data-early): Ditto.

	* nntp.el (nntp-retrieve-group-data-early): Ditto.

2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Don't make bidi-paragraph-direction
	bound globally in old Emacsen and XEmacsen.

2012-01-26  Nick Alcock  <nick.alcock@oracle.com>  (tiny change)

	* gnus.el (gnus-group-find-parameter): Check for liveness of the
	buffer, not of the string which is its name.
